# thunderbird-contracts

./: .gitignore  README.md  buf.gen.yaml  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: contracts-ci.yml  contracts-publish.yml
docs/: PRIVATE_FEEDS.md  VERSIONING.md
proto/thunderbird/v1/: auth.proto  catalog.proto  common.proto  events.proto  moderation.proto  offline_sync.proto  profile.proto  session.proto
sdk/csharp/: Thunderbird.Contracts.csproj
sdk/python/src/thunderbird_contracts/: __init__.py
sdk/typescript/src/: index.ts
