[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderbird-contracts"
version = "0.1.0"
description = "Thunderbird protobuf contracts and generated Python SDK"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thunderbird Platform" }]

[tool.setuptools]
package-dir = {"" = "sdk/python/src"}

[tool.setuptools.packages.find]
where = ["sdk/python/src"]
